# tauri-app

./: .gitmodules  package-lock.json  package.json
src/: App.tsx  activityBarConfig.ts  index.css  tahoe-tokens.css
src-tauri/: Cargo.toml
src-tauri/src/: lib_additions.rs  main.rs  pty.rs
src/commands/: commands.ts
src/components/: ActivityBar.tsx  AddFieldModal.tsx  ClusterSelector.tsx  ClusterTargetBadge.tsx  ContextMenu.tsx  DeleteConfirmDialog.tsx  EditFieldModal.tsx  Graphconnections.tsx
src/layout/: DockAreaView.tsx  DockLayout.tsx  DragPreview.tsx  IDELayout.tsx  PanelRender.tsx  PanelRenderer.tsx  Resizer.tsx  TabGroupView.tsx  types.ts  utils.ts
src/mock/: defaultLayout.ts
src/panels/: ClusterDiffPanel.tsx  DeployImagePanel.tsx  EditorPanel.tsx  ExplorerPanel.tsx  GraphPanel.tsx  PostgresConnectionModal.tsx  TerminalPanel.tsx  TerminalTabsPanel.tsx  useTerminalTabsPanel.tsx
src/screens/: ProjectSelector.tsx
src/store/: activityBarStore.ts  ideStore.ts  tauriStore.ts
src/toolwindows/: ActivityBar.tsx  ToolWindowPanel.tsx  ToolWindowResizer.tsx  toolWindowRegistry.ts  toolWindowStore.ts  toolWindowTypes.ts
src/ui/: AppIcon.tsx
