[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }

# portable-pty: cross-platform PTY API (wraps posix_openpt on macOS/Linux,
#   ConPTY on Windows). Handles SIGWINCH, process lifecycle, etc.
portable-pty = "0.8"

# base64: encode raw PTY bytes → safe UTF-8 strings for Tauri IPC.
# The Tauri event system transmits JSON strings; raw bytes must be encoded.
base64 = "0.21"

# which: find shell executables in PATH (used for pwsh detection on Windows)
which = "6"


# ── Windows-only: enable ConPTY (Windows 10+ pseudo-console API) ─────────────
# portable-pty uses this automatically on Windows; no extra config needed.
# Minimum Windows version required: 10 build 17763 (October 2018 Update).


# ── tauri.conf.json additions ─────────────────────────────────────────────────
# In src-tauri/capabilities/default.json (or tauri.conf.json for Tauri v1),
# no additional permissions are required beyond what you already have.
# The PTY process inherits the app's sandbox level.
#
# If you use Tauri v2 with capability files, ensure your default.json allows:
#   "core:event:allow-listen"   (for listening to pty-output events)
#   "core:event:allow-emit"     (emitting from Rust is always allowed)
